20220401 Office Review Data Analysis

--- a/data_analysis/Python for Data Analysis(2nd Edition)/03 Built-in Data Structures, Functions, and Files.ipynb
+++ b/data_analysis/Python for Data Analysis(2nd Edition)/03 Built-in Data Structures, Functions, and Files.ipynb
@@ -2886,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2916,7 +2916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2937,10 +2937,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sueña el r'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(path)\n",
+    "f.read(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'Sue\\xc3\\xb1a el '"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f2 = open(path, 'rb') # Binary mode\n",
+    "f2.read(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The read method advances the file handle’s position by the number of bytes read.\n",
+    "# tell gives you the current position:\n",
+    "\n",
+    "print(f.tell())\n",
+    "f2.tell()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'utf-8'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Even though we read 10 characters from the file, the position is 11 because it took\n",
+    "# that many bytes to decode 10 characters using the default encoding. You can check\n",
+    "# the default encoding in the sys module:\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "sys.getdefaultencoding()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20796/2310355491.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# seek changes the file position to the indicated byte in the file:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mseek\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: I/O operation on closed file."
+     ]
+    }
+   ],
+   "source": [
+    "# seek changes the file position to the indicated byte in the file:\n",
+    "\n",
+    "print(f.seek(3))\n",
+    "\n",
+    "f.read(1)\n",
+    "\n",
+    "f.close()\n",
+    "f2.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sueña el rico en su riqueza,', 'que más cuidados le ofrece;', '', 'sueña el pobre que padece', 'su miseria y su pobreza;', '', 'sueña el que a medrar empieza,', 'sueña el que afana y pretende,', 'sueña el que agravia y ofende,', '', 'y en el mundo, en conclusión,', 'todos sueñan lo que son,', 'aunque ninguno lo entiende.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(path) as f: \n",
+    "    lines = [x.rstrip() for x in f]\n",
+    "\n",
+    "print(lines)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# To write text to a file, you can use the file’s write or writelines methods. For exam‐\n",
+    "# ple, we could create a version of prof_mod.py with no blank lines like so:\n",
+    "\n",
+    "with open('examples/tmp.txt', 'w') as handle:\n",
+    "    handle.writelines(x for x in open(path) if len(x) > 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sueña el rico en su riqueza,\\n',\n",
+       " 'que más cuidados le ofrece;\\n',\n",
+       " 'sueña el pobre que padece\\n',\n",
+       " 'su miseria y su pobreza;\\n',\n",
+       " 'sueña el que a medrar empieza,\\n',\n",
+       " 'sueña el que afana y pretende,\\n',\n",
+       " 'sueña el que agravia y ofende,\\n',\n",
+       " 'y en el mundo, en conclusión,\\n',\n",
+       " 'todos sueñan lo que son,\\n',\n",
+       " 'aunque ninguno lo entiende.\\n']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('examples/tmp.txt') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "lines    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bytes and Unicode with Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sueña el r'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(path) as f:\n",
+    "    chars = f.read(10)\n",
+    "\n",
+    "chars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'Sue\\xc3\\xb1a el '"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(path, 'rb') as f:\n",
+    "    data = f.read(10)\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sueña el '"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.decode('utf8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sueñ'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[:4].decode('utf8') # Error Occured\n",
+    "data[:5].decode('utf8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sueña el r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Text mode, combined with the encoding option of open, provides a convenient way\n",
+    "# to convert from one Unicode encoding to another:\n",
+    "\n",
+    "path = 'examples/segismundo.txt'\n",
+    "sink_path = 'examples/sink.txt'\n",
+    "\n",
+    "with open(path) as source:\n",
+    "    with open(sink_path, 'xt', encoding='iso-8859-1') as sink:\n",
+    "        sink.write(source.read())\n",
+    "\n",
+    "with open(sink_path, encoding='iso-8859-1') as f:\n",
+    "    print(f.read(10))\n"
+   ]
   }
  ],
  "metadata": {
@@ -2962,7 +3269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
