20220403 Home Review Data Analysis

--- a/data_analysis/Python for Data Analysis(2nd Edition)/05. Getting Started with pandas.ipynb
+++ b/data_analysis/Python for Data Analysis(2nd Edition)/05. Getting Started with pandas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -41,13 +41,14 @@
     "mpl.rc('font', family='NanumGothic')  # 한글 폰트 설정\n",
     "                                        # 윈도우 폰트 위치 - C:\\Windows\\Fonts\n",
     "mpl.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
     "plt.figure(figsize=(10,5))              # 그래프 사이즈 설정\n",
     "plt.rc('figure', figsize=(10, 6))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2028,7 +2029,164 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.2 Essential Functionality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reindexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "d    4.5\n",
+       "b    7.2\n",
+       "a   -5.3\n",
+       "c    3.6\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj = pd.Series([4.5, 7.2, -5.3, 3.6], index=['d', 'b', 'a', 'c'])\n",
+    "obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a   -5.3\n",
+       "b    7.2\n",
+       "c    3.6\n",
+       "d    4.5\n",
+       "e    NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj2 = obj.reindex(['a','b','c','d','e'])\n",
+    "obj2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      blue\n",
+       "2    purple\n",
+       "4    yellow\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj3 = pd.Series(['blue', 'purple', 'yellow'], index=[0, 2, 4])\n",
+    "obj3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      blue\n",
+       "1      blue\n",
+       "2    purple\n",
+       "3    purple\n",
+       "4    yellow\n",
+       "5    yellow\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj3.reindex(range(6), method='ffill')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      blue\n",
+       "1      blue\n",
+       "2    purple\n",
+       "3    purple\n",
+       "4    yellow\n",
+       "5    yellow\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj3.reindex(range(6), method='ffill')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With DataFrame, reindex can alter either the (row) index, columns, or both. When\n",
+    "# passed only a sequence, it reindexes the rows in the result:\n",
+    "\n",
+    "frame = pd.DataFrame(np)\n",
+    "\n",
+    "pd.Data"
+   ]
   }
  ],
  "metadata": {
@@ -2050,7 +2208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
