--- a/data_analysis/Pandas/Python_for_Data_Analysis.ipynb
+++ b/data_analysis/Pandas/Python_for_Data_Analysis.ipynb
@@ -2368,7 +2368,7 @@
     }
    ],
    "source": [
-    "# 원본 DataFrame 을 직접 변경 drop(, inplace=True)\n",
+    "# 원1본 DataFrame 을 직접 변경 drop(, inplace=True)\n",
     "df1 = df.copy()\n",
     "df.drop('one', axis=1)\n",
     "df1.drop('one', axis=1, inplace=True)\n",
@@ -2485,10 +2485,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0.0\n",
+      "dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "0    0.0\n",
+      "1    1.0\n",
+      "dtype: float64\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "0    0.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "# Label 과 Inter 가 동일한 경우 먼저 Label을 찾도록 설계되어 있음\n",
     "ser = pd.Series(np.arange(3.))\n",
     "ser2 = pd.Series(np.arange(3.), index=['a', 'b', 'c'])\n",
@@ -46336,7 +46354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
