20220606 Office Review Data Analysis

--- a/data_analysis/Python for Data Analysis(2nd Edition)/05. Getting Started with pandas.ipynb
+++ b/data_analysis/Python for Data Analysis(2nd Edition)/05. Getting Started with pandas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "# %matplotlib tk 는 별도의 창에 그래프를 그리고 직접 그래프의 속성을 변경할 수 있음\n",
     "\n",
     "# 실수형 포맷\n",
-    "pd.options.display.float_format = '{:0,.2f}'.format \n",
+    "pd.options.display.float_format = '{:0,.5f}'.format \n",
     "np.random.seed(12345)\n",
     "\n",
     "mpl.rc('font', family='NanumGothic')  # 한글 폰트 설정\n",
@@ -6357,7 +6357,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlation and Covariance - 상관관계와 공분산"
+    "### Correlation and Covariance - 상관관계와 공분산\n",
+    "\n",
+    "Some summary statistics, like correlation and covariance, are computed from pairs of\n",
+    "arguments. Let’s consider some DataFrames of stock prices and volumes obtained\n",
+    "from Yahoo! Finance using the add-on pandas-datareader package. If you don’t\n",
+    "have it installed already, it can be obtained via conda or pip:\n",
+    "\n",
+    "conda install pandas-datareader\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda install pandas-datareader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I use the pandas_datareader module to download some data for a few stock tickers:\n",
+    "\n",
+    "import pandas_datareader.data as web\n",
+    "\n",
+    "all_data = {ticker: web.get_data_yahoo(ticker)\n",
+    "            for ticker in ['AAPL', 'IBM', 'MSFT', 'GOOG']}\n",
+    "\n",
+    "price = pd.DataFrame({ticker: data['Adj Close']\n",
+    " for ticker, data in all_data.items()})\n",
+    "\n",
+    "volume = pd.DataFrame({ticker: data['Volume']\n",
+    " for ticker, data in all_data.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               AAPL       IBM     MSFT      GOOG\n",
+      "Date                                            \n",
+      "2017-04-06 33.90950 129.28978 61.35796 827.88000\n",
+      "2017-04-07 33.83397 129.05737 61.31128 824.66998\n",
+      "2017-04-10 33.79383 128.35257 61.17123 824.72998\n",
+      "2017-04-11 33.43035 127.88776 61.12458 823.34998\n",
+      "2017-04-12 33.47046 127.94776 60.89122 824.32001\n",
+      "               AAPL      IBM     MSFT     GOOG\n",
+      "Date                                          \n",
+      "2017-04-06      NaN      NaN      NaN      NaN\n",
+      "2017-04-07 -0.00223 -0.00180 -0.00076 -0.00388\n",
+      "2017-04-10 -0.00119 -0.00546 -0.00228  0.00007\n",
+      "2017-04-11 -0.01076 -0.00362 -0.00076 -0.00167\n",
+      "2017-04-12  0.00120  0.00047 -0.00382  0.00118\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I now compute percent changes of the prices, a time series operation which will be\n",
+    "# explored further in Chapter 11:\n",
+    "# 수익률 계산\n",
+    "# return(%) = (현재가격 - 어제가격)/어제가격 * 100\n",
+    "\n",
+    "returns = price.pct_change()\n",
+    "print(price.head())\n",
+    "print(returns.head())"
    ]
   },
   {
@@ -6365,7 +6446,439 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4817515243847194\n",
+      "0.4817515243847194\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The corr method of Series computes the correlation of the overlapping, non-NA,\n",
+    "# aligned-by-index values in two Series. Relatedly, cov computes the covariance:\n",
+    "\n",
+    "print(returns['MSFT'].corr(returns['IBM'])) # 조정 종가 변동률의 상관관계\n",
+    "print(returns.MSFT.corr(returns.IBM))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40986793292135226"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price['MSFT'].corr(price['IBM']) # 조정 종가의 상관관계"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00014425247971682644\n",
+      "321.25776149779244\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(returns['MSFT'].cov(returns['IBM'])) # 조정 종가 변동률의 공분산\n",
+    "print(price['MSFT'].cov(price['IBM'])) # 조정 종가의 공분산"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>GOOG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAPL</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.42961</td>\n",
+       "      <td>0.74642</td>\n",
+       "      <td>0.66781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBM</th>\n",
+       "      <td>0.42961</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.48175</td>\n",
+       "      <td>0.45595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSFT</th>\n",
+       "      <td>0.74642</td>\n",
+       "      <td>0.48175</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.78656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GOOG</th>\n",
+       "      <td>0.66781</td>\n",
+       "      <td>0.45595</td>\n",
+       "      <td>0.78656</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        AAPL     IBM    MSFT    GOOG\n",
+       "AAPL 1.00000 0.42961 0.74642 0.66781\n",
+       "IBM  0.42961 1.00000 0.48175 0.45595\n",
+       "MSFT 0.74642 0.48175 1.00000 0.78656\n",
+       "GOOG 0.66781 0.45595 0.78656 1.00000"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DataFrame’s corr and cov methods, on the other hand, return a full correlation or\n",
+    "# covariance matrix as a DataFrame, respectively:\n",
+    "\n",
+    "returns.corr()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>GOOG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAPL</th>\n",
+       "      <td>0.00038</td>\n",
+       "      <td>0.00014</td>\n",
+       "      <td>0.00026</td>\n",
+       "      <td>0.00023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBM</th>\n",
+       "      <td>0.00014</td>\n",
+       "      <td>0.00028</td>\n",
+       "      <td>0.00014</td>\n",
+       "      <td>0.00013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSFT</th>\n",
+       "      <td>0.00026</td>\n",
+       "      <td>0.00014</td>\n",
+       "      <td>0.00032</td>\n",
+       "      <td>0.00025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GOOG</th>\n",
+       "      <td>0.00023</td>\n",
+       "      <td>0.00013</td>\n",
+       "      <td>0.00025</td>\n",
+       "      <td>0.00031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        AAPL     IBM    MSFT    GOOG\n",
+       "AAPL 0.00038 0.00014 0.00026 0.00023\n",
+       "IBM  0.00014 0.00028 0.00014 0.00013\n",
+       "MSFT 0.00026 0.00014 0.00032 0.00025\n",
+       "GOOG 0.00023 0.00013 0.00025 0.00031"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.cov()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>GOOG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAPL</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.42542</td>\n",
+       "      <td>0.97877</td>\n",
+       "      <td>0.95324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBM</th>\n",
+       "      <td>0.42542</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.40987</td>\n",
+       "      <td>0.55414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSFT</th>\n",
+       "      <td>0.97877</td>\n",
+       "      <td>0.40987</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.96202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GOOG</th>\n",
+       "      <td>0.95324</td>\n",
+       "      <td>0.55414</td>\n",
+       "      <td>0.96202</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        AAPL     IBM    MSFT    GOOG\n",
+       "AAPL 1.00000 0.42542 0.97877 0.95324\n",
+       "IBM  0.42542 1.00000 0.40987 0.55414\n",
+       "MSFT 0.97877 0.40987 1.00000 0.96202\n",
+       "GOOG 0.95324 0.55414 0.96202 1.00000"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>IBM</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>GOOG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAPL</th>\n",
+       "      <td>2,015.53384</td>\n",
+       "      <td>185.97471</td>\n",
+       "      <td>3,537.06057</td>\n",
+       "      <td>27,389.34950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBM</th>\n",
+       "      <td>185.97471</td>\n",
+       "      <td>94.81651</td>\n",
+       "      <td>321.25776</td>\n",
+       "      <td>3,453.36387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSFT</th>\n",
+       "      <td>3,537.06057</td>\n",
+       "      <td>321.25776</td>\n",
+       "      <td>6,479.40926</td>\n",
+       "      <td>49,560.45935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GOOG</th>\n",
+       "      <td>27,389.34950</td>\n",
+       "      <td>3,453.36387</td>\n",
+       "      <td>49,560.45935</td>\n",
+       "      <td>409,606.33863</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             AAPL         IBM         MSFT          GOOG\n",
+       "AAPL  2,015.53384   185.97471  3,537.06057  27,389.34950\n",
+       "IBM     185.97471    94.81651    321.25776   3,453.36387\n",
+       "MSFT  3,537.06057   321.25776  6,479.40926  49,560.45935\n",
+       "GOOG 27,389.34950 3,453.36387 49,560.45935 409,606.33863"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price.cov()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AAPL   0.42961\n",
+       "IBM    1.00000\n",
+       "MSFT   0.48175\n",
+       "GOOG   0.45595\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using DataFrame’s corrwith method, you can compute pairwise correlations\n",
+    "# between a DataFrame’s columns or rows with another Series or DataFrame. Passing a\n",
+    "# Series returns a Series with the correlation value computed for each column:\n",
+    "\n",
+    "returns.corrwith(returns.IBM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Passing a DataFrame computes the correlations of matching column names. Here I\n",
+    "# compute correlations of percent changes with volume:\n"
+   ]
   }
  ],
  "metadata": {
