20220928 Home Review ML

--- a/data_analysis/(김성) 머신러닝_딥러닝/(Lec01) 기본적인 Machine Learning 의 용어와 개념.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/(Lec01) 기본적인 Machine Learning 의 용어와 개념.ipynb
@@ -93,6 +93,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Predicting final exam score based on time spent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pass/non-pass based on time spent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
