--- a/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-03-2-minimizing_cost_gradient_update.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-03-2-minimizing_cost_gradient_update.ipynb
@@ -2,14 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\USER\\anaconda3\\lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n"
+     ]
+    }
+   ],
    "source": [
     "# Lab 3 Minimizing Cost\n",
     "import tensorflow.compat.v1 as tf\n",
     "tf.disable_v2_behavior()\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 21.2103 [-0.13702172]\n",
+      "1 6.033153 [0.39358842]\n",
+      "2 1.7160965 [0.6765805]\n",
+      "3 0.48813415 [0.8275096]\n",
+      "4 0.1388471 [0.9080051]\n",
+      "5 0.039494295 [0.9509361]\n",
+      "6 0.011233918 [0.97383255]\n",
+      "7 0.0031954357 [0.98604405]\n",
+      "8 0.00090891664 [0.9925568]\n",
+      "9 0.00025853832 [0.9960303]\n",
+      "10 7.35413e-05 [0.99788284]\n",
+      "11 2.091765e-05 [0.99887085]\n",
+      "12 5.9499093e-06 [0.9993978]\n",
+      "13 1.6921905e-06 [0.99967885]\n",
+      "14 4.81307e-07 [0.9998287]\n",
+      "15 1.3698406e-07 [0.9999086]\n",
+      "16 3.8973795e-08 [0.99995124]\n",
+      "17 1.1105257e-08 [0.999974]\n",
+      "18 3.1516645e-09 [0.9999861]\n",
+      "19 9.01732e-10 [0.9999926]\n",
+      "20 2.5492378e-10 [0.99999607]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lab 3 Minimizing Cost\n",
+    "\n",
     "\n",
     "tf.set_random_seed(777)  # for reproducibility\n",
     "\n",
@@ -42,27 +91,40 @@
     "    sess.run(tf.global_variables_initializer())\n",
     "\n",
     "    for step in range(21):\n",
-    "        _, cost_val, W_val = sess.run(\n",
-    "            [update, cost, W], feed_dict={X: x_data, Y: y_data}\n",
-    "        )\n",
+    "        _, cost_val, W_val = sess.run([update, cost, W], feed_dict={X: x_data, Y: y_data})\n",
     "        print(step, cost_val, W_val)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.8"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
    }
   }
  },
