--- a/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-05-2-logistic_regression_diabetes.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-05-2-logistic_regression_diabetes.ipynb
@@ -6,9 +6,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lab 5 Logistic Regression Classifier\n",
-    "import tensorflow as tf\n",
+    "%matplotlib inline \n",
+    "import random\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "tf.disable_v2_behavior()\n",
+    "\n",
+    "matplotlib.rcParams['font.family'] = 'Malgun Gothic'\n",
+    "matplotlib.rcParams['font.size'] = 15\n",
+    "matplotlib.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lab 5 Logistic Regression Classifier\n",
+    "\n",
     "tf.set_random_seed(777)  # for reproducibility\n",
     "\n",
     "xy = np.loadtxt('data-03-diabetes.csv', delimiter=',', dtype=np.float32)\n",
