--- a/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-06-2-softmax_zoo_classifier.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-06-2-softmax_zoo_classifier.ipynb
@@ -1,16 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "one_hot()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline \n",
+    "import random\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "\n",
     "import tensorflow.compat.v1 as tf\n",
     "tf.disable_v2_behavior()\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "matplotlib.rcParams['font.family'] = 'Malgun Gothic'\n",
+    "matplotlib.rcParams['font.size'] = 15\n",
+    "matplotlib.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
