--- a/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-07-3-linear_regression_min_max.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-07-3-linear_regression_min_max.ipynb
@@ -2,22 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline \n",
+    "import random\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "\n",
     "import tensorflow.compat.v1 as tf\n",
     "tf.disable_v2_behavior()\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "matplotlib.rcParams['font.family'] = 'Malgun Gothic'\n",
+    "matplotlib.rcParams['font.size'] = 15\n",
+    "matplotlib.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.99999999 0.99999999 0.         1.         1.        ]\n",
+      " [0.70548491 0.70439552 1.         0.71881782 0.83755791]\n",
+      " [0.54412549 0.50274824 0.57608696 0.606468   0.6606331 ]\n",
+      " [0.33890353 0.31368023 0.10869565 0.45989134 0.43800918]\n",
+      " [0.51436    0.42582389 0.30434783 0.58504805 0.42624401]\n",
+      " [0.49556179 0.42582389 0.31521739 0.48131134 0.49276137]\n",
+      " [0.11436064 0.         0.20652174 0.22007776 0.18597238]\n",
+      " [0.         0.07747099 0.5326087  0.         0.        ]]\n",
+      "100 Cost:  1.1195982 \n",
+      "Prediction:\n",
+      " [[-0.7895388 ]\n",
+      " [-0.97857004]\n",
+      " [-0.4558354 ]\n",
+      " [ 0.14518058]\n",
+      " [-0.2217831 ]\n",
+      " [-0.16560018]\n",
+      " [ 0.470778  ]\n",
+      " [ 0.4350529 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "tf.set_random_seed(777)  # for reproducibility\n",
     "\n",
@@ -85,8 +121,153 @@
     "        _, cost_val, hy_val = sess.run(\n",
     "            [train, cost, hypothesis], feed_dict={X: x_data, Y: y_data}\n",
     "        )\n",
-    "        print(step, \"Cost: \", cost_val, \"\\nPrediction:\\n\", hy_val)"
+    "        if (step == 100):\n",
+    "            print(step, \"Cost: \", cost_val, \"\\nPrediction:\\n\", hy_val)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## min_max_scaler Test\n",
+    "\n",
+    "xy = np.array(\n",
+    "    [\n",
+    "        [828.659973, 833.450012, 908100, 828.349976, 831.659973],\n",
+    "        [823.02002, 828.070007, 1828100, 821.655029, 828.070007],\n",
+    "        [819.929993, 824.400024, 1438100, 818.97998, 824.159973],\n",
+    "        [816, 820.958984, 1008100, 815.48999, 819.23999],\n",
+    "        [819.359985, 823, 1188100, 818.469971, 818.97998],\n",
+    "        [819, 823, 1198100, 816, 820.450012],\n",
+    "        [811.700012, 815.25, 1098100, 809.780029, 813.669983],\n",
+    "        [809.51001, 816.659973, 1398100, 804.539978, 809.559998],\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "def min_max_scaler(data):\n",
+    "    numerator = data - np.min(data, 0)\n",
+    "    denominator = np.max(data, 0) - np.min(data, 0)\n",
+    "    # noise term prevents the zero division\n",
+    "    return numerator / (denominator + 1e-7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(x,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0],\n",
+       "       [3, 3, 3],\n",
+       "       [6, 6, 6]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = x - np.min(x,0)\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 6, 6])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = np.max(x, 0) - np.min(x, 0)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.        ],\n",
+       "       [0.49999999, 0.49999999, 0.49999999],\n",
+       "       [0.99999998, 0.99999998, 0.99999998]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n / (d + 1e-7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -96,7 +277,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4,
