--- a/data_analysis/(김성) 머신러닝_딥러닝/(Lec07-1) 학습 rate, Overfitting, 그리고 일반화(Regularization).ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/(Lec07-1) 학습 rate, Overfitting, 그리고 일반화(Regularization).ipynb
@@ -78,6 +78,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Normalized inputs(min-max scale)\n",
+    "- Input Data 가 크거나 또는 들쑥날쑥한 경우에 적용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def min_max_scaler(data):\n",
+    "    numerator = data - np.min(data, 0)\n",
+    "    denominator = np.max(data, 0) - np.min(data, 0)\n",
+    "    # noise term prevents the zero division\n",
+    "    return numerator / (denominator + 1e-7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary\n",
     "- Learning rate\n",
     "- Data preprocessing\n",
@@ -99,7 +120,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4,
