--- a/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-04-3-file_input_linear_regression.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-04-3-file_input_linear_regression.ipynb
@@ -1,16 +1,45 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "## 파일 읽기\n",
+    "### np.loadtxt()   # file load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\USER\\anaconda3\\lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline \n",
+    "import random\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "\n",
     "import tensorflow.compat.v1 as tf\n",
     "tf.disable_v2_behavior()\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "matplotlib.rcParams['font.family'] = 'Malgun Gothic'\n",
+    "matplotlib.rcParams['font.size'] = 15\n",
+    "matplotlib.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
