--- a/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-07-1-learning_rate_and_evaluation.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-07-1-learning_rate_and_evaluation.ipynb
@@ -16,11 +16,22 @@
     }
    ],
    "source": [
+    "%matplotlib inline \n",
+    "import random\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "\n",
     "import tensorflow.compat.v1 as tf\n",
     "tf.disable_v2_behavior()\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "matplotlib.rcParams['font.family'] = 'Malgun Gothic'\n",
+    "matplotlib.rcParams['font.size'] = 15\n",
+    "matplotlib.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
